--- a/src/main/resources/templates/page/en/registration.html
+++ b/src/main/resources/templates/page/en/registration.html
@@ -34,10 +34,10 @@
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
           </div>
           <div style="width:75%;height:200px; float:left;display:inline-block;">
-            <p class="banner_p" style="padding:50px 0;font-family:'Times New Roman';font-weight:bold" align="right">
+            <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
               International Conference On Advances in Biological<br/>
 							Science and Technology<br/>
-							December 26-28, 2019
+							<i>Bangkok, Thailand -- December 26-28, 2019</i>
             </p>
           </div>
           <div class="clear"></div>
@@ -47,26 +47,26 @@
   </div>
 
 
-    <div class="navs">
-      <ul class="menus mg-ctr">
-        <li><a title="ICABST2019" href="/">Home</a></li>
-        <li><a title="About" href="/about">About</a></li>
-        <li><a title="Organization" href="/organization">Organizer</a></li>
-        <li><a title="Speaker" href="/speakers">Speaker</a></li>
-        <li><a title="Program" href="/program">Program</a></li>
-        <li><a title="Submission" href="/submission">Submission</a></li>
-        <li><a title="Registration" href="/registration">Registration</a></li>
-        <li><a title="Venue" href="/venue">Venue</a></li>
-    		<li><a title="Chinese" href="/cn">CHINESE</a></li>
-      </ul>
-    </div>
+   <div class="navs">
+    <ul class="menus mg-ctr">
+      <li><a title="ICABST2019" href="/">Home</a></li>
+      <li><a title="About" href="/about">About</a></li>
+      <li><a title="Organization" href="/organization">Organizer</a></li>
+      <li><a title="Speaker" href="/speakers">Speaker</a></li>
+      <li style="width: 140px"><a title="Submission" href="/submission">Submission</a></li>
+			<li><a title="Program" href="/program">Program</a></li>
+      <li style="width: 140px"><a title="Registration" href="/registration">Registration</a></li>
+      <li><a title="Venue" href="/venue">Venue</a></li>
+    	<li><a title="Chinese" href="/cn">CHINESE</a></li>
+    </ul>
+  </div>
     
 </div>
 <!--header end-->
 
 <div class="w-1200 bg_white pt-30">
 
-  <div class="page; lh-40">
+  <div class="page; lh-40" style="text-align: justify; font-family:'Times New Roman'; font-size: 20px">
     <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
       <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Registration</div>
       <div class="public_p pb-20 pl-30">
@@ -75,8 +75,8 @@
           <strong>Registration Steps：</strong>
         </p>
         <p>
-          1. Make submission by <a class="pointer" href="/cnsubmit" target="_blank" style="color: #102cf7"><u><strong>Online Submission System(Less than 10MB)</strong></u></a>，and choose registration type<br/>
-					Or you can download the Registration Form, fill the information needed and send it by email (icabst@apanse.com) with your abstract.
+          1. Make submission by <a class="pointer" href="/submit" target="_blank" style="color: #102cf7"><u><strong>Online Submission System(Less than 10MB)</strong></u></a>，and choose registration type<br/>
+					Or download the Registration Form, fill the information needed and send it by email (icabst@apanse.com) with your abstract.
         </p>
         <p>
           2. The abstract will be processed for peer review by conference committee, if accepted, the Acceptance Letter and Invoice will be issued in 7-10 working days.
@@ -100,8 +100,8 @@
           <tbody>
           <tr>
             <th style=" height: 38px; width: 120px; text-align:center">Registration Type<br/>(Deadline)</th>
-            <th style=" height: 38px; width: 120px; text-align:center">Standard Reg.<br/>(Oct. 31)</th>
-            <th style=" height: 38px; width: 120px; text-align:center">Late/On-site Reg.<br/>(Dec. 25)</th>
+            <th style=" height: 38px; width: 120px; text-align:center">Standard Registration<br/>(Oct. 31)</th>
+            <th style=" height: 38px; width: 120px; text-align:center">Late/On-site Registration<br/>(Dec. 25)</th>
             <th style=" height: 38px; text-align:center">Registration Entitlement</th>
           </tr>
           <tr>
@@ -131,8 +131,8 @@
 				<p>2. After payment, please send the copy of remittance receipt to conference secretary by icabst@apanse.com</p>
         <p>3. We provide three payment methods: (1)PayPal/Credit Card online (2)Bank transfer/Wire transfer and (3)Cash on-site.</p>
         <p>4. Cash on-site only apply the Late/On-site Registration Type.</p>
-        <p>5. All handling fee (charged by bank or PayPal) should be covered by participatants and may not be deducted from the amount remitted.</p>
-				<p>6. Your registration will NOT be confirmed until payment is received in full. When the registration is confirmed, an e-copy of official receipt will be sent to you.</p>
+        <p>5. Handling fee (charged by bank or PayPal) should be covered by yourself.</p>
+				<p>6. Your registration will NOT be confirmed until payment is received in full.</p>
 				<p>7. The registration fee DOES NOT INCLUDE Accommodation fee, Transportation fee, and Visa application fee.</p>
       </div>
       <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Cancellation Policy</div>
@@ -150,7 +150,7 @@
           3）After Dec. 1, No Refund.
         </p>
         <p>
-          *All cancellations must be made and received in writing.  
+          *All cancellations must be made and received in writing.<br/>
 					*For refund, the handling fee will be reduced.
         </p>
       </div>
@@ -166,22 +166,22 @@
 			    <div class="clear"></div>
 			  </ul>
 			</div>
-        <div class="f-20 text-center pt-20 pb-20 color-03 f-b">Important Dates</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Important Dates</div>
 				<div class="pb-10">
         <ul>
             <p>Abstract Deadline: Oct. 20, 2019</p>
 						<p>Reg. Deadline: Oct. 31, 2019</p>
-						<p>Acceptance Notification: 10 working days</p>
+						<p>Acceptance: 7-10 working days</p>
 						<p>Conf. Date: Dec. 26-28, 2019</p>
         </ul>
 				</div>
       <div style="border-top: 2px dashed; border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
-        <div class="f-20 text-center pt-20 pb-20 color-03 f-b">Organizers</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Organizers</div>
         <ul>
             <p>Asia-Pacific Association of Natural Science and Engineering</p>
         </ul>
       </div>
-        <div class="f-20 text-center pt-20 pb-20 color-03 f-b">Contact</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
         <ul>
             <p>Secretary：Jason Sun, Alex Liu</p>
 						<p>Email：icabst@apanse.com</p>
