--- a/src/main/resources/templates/page/en/submit.html
+++ b/src/main/resources/templates/page/en/submit.html
@@ -34,10 +34,10 @@
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
           </div>
           <div style="width:75%;height:200px; float:left;display:inline-block;">
-            <p class="banner_p" style="padding:50px 0;font-family:'Times New Roman';font-weight:bold" align="right">
+            <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
               International Conference On Advances in Biological<br/>
 							Science and Technology<br/>
-							December 26-28, 2019
+							<i>Bangkok, Thailand -- December 26-28, 2019</i>
             </p>
           </div>
           <div class="clear"></div>
@@ -47,33 +47,33 @@
   </div>
 
 
-    <div class="navs">
-      <ul class="menus mg-ctr">
-        <li><a title="ICABST2019" href="/">Home</a></li>
-        <li><a title="About" href="/about">About</a></li>
-        <li><a title="Organization" href="/organization">Organizer</a></li>
-        <li><a title="Speaker" href="/speakers">Speaker</a></li>
-        <li><a title="Program" href="/program">Program</a></li>
-        <li><a title="Submission" href="/submission">Submission</a></li>
-        <li><a title="Registration" href="/registration">Registration</a></li>
-        <li><a title="Venue" href="/venue">Venue</a></li>
+   <div class="navs">
+    <ul class="menus mg-ctr">
+      <li><a title="ICABST2019" href="/">Home</a></li>
+      <li><a title="About" href="/about">About</a></li>
+      <li><a title="Organization" href="/organization">Organizer</a></li>
+      <li><a title="Speaker" href="/speakers">Speaker</a></li>
+      <li style="width: 140px"><a title="Submission" href="/submission">Submission</a></li>
+			<li><a title="Program" href="/program">Program</a></li>
+      <li style="width: 140px"><a title="Registration" href="/registration">Registration</a></li>
+      <li><a title="Venue" href="/venue">Venue</a></li>
     	<li><a title="Chinese" href="/cn">CHINESE</a></li>
-      </ul>
-    </div>
+    </ul>
+  </div>
         
 </div>
 <!--header end-->
 
 <div class="w-1200 bg_white pt-30">
 
-    <div class="page; lh-40">
+    <div class="page; lh-40" style="text-align: justify; font-family:'Times New Roman'; font-size: 20px">
         <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
             <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Introduction</div>
             <div class="public_p pb-20 pl-30">
                     <p>1. Abstract should be strictly within one A4 page in length apart from the cover letter page and containing at least 200 words.</p>
 					<p>2. All Submissions should be in English, and no other language is acceptable.</p>
                     <p>3. You should fill all the information needed to finish the registration.</p>
-                    <p>4. Or you can download the Registration Form, fill the information needed and send it by email (icabst@apanse.com) with your abstract.</p>
+                    <p>4. Or you can download the Registration Form, fill the information needed and send it by email (icabst@apanse.com) with your abstract and CV.</p>
                     <p>5. After submission, the conference secretary will contact you in about 2 working days.</p>
             </div>
             <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Online Submission System</div>
@@ -84,79 +84,102 @@
                         <div class="layui-form-item three-level-title">
                             <strong>I, Personal Information（*required）</strong>
                         </div>
-                        <div class="layui-form-item">
-                            <div class="layui-inline">
+						
+                        <div class="layui-form-item pr-20">
                                 <input type="hidden" id="uploadFileUrlID" name="uploadFileUrl" required lay-verify="required"
                                    autocomplete="off" class="layui-input">
                                 <label for="usernameId" class="layui-form-label">
                                     <span class="x-red">*</span>Name
                                 </label>
-                                <div class="layui-input-inline">
+                                <div class="layui-input-block">
                                     <input type="text" id="usernameId" name="userName" required lay-verify="required"
                                         autocomplete="off" class="layui-input">
                                 </div>
-                            </div>
-                            <div class="layui-inline fr">
-                                    <label for="phoneId" class="layui-form-label">
-                                        <span class="x-red">*</span>Phone
-                                    </label>
-                                    <div class="layui-input-inline">
-                                        <input type="text" id="phoneId" name="phone" required lay-verify="required"
-                                            autocomplete="off" class="layui-input">
-                                    </div>
-                                </div>
                         </div>
-
-                        <div class="layui-form-item">
-                            <div class="layui-inline">
-                                <label for="positionId" class="layui-form-label">
-                                    <span class="x-red">*</span>Title
-                                </label>
-                                <div class="layui-input-block">
-                                    <input type="text" id="positionId" name="position" required lay-verify="required"
-                                               autocomplete="off" class="layui-input">
-                                </div>
-                            </div>
-                            <div class="layui-inline fr">
-                                <label for="qqId" class="layui-form-label">
-                                    Mobile
-                                </label>
-                                <div class="layui-input-inline">
-                                    <input type="text" id="qqId" name="qq"
-                                        autocomplete="off" class="layui-input">
-                                </div>
-                            </div>
-                        </div>
-						
+							
                         <div class="layui-form-item pr-20">
-                            <label for="emailId" class="layui-form-label">
-                                <span class="x-red">*</span>Email
-                            </label>
-                            <div class="layui-input-inline">
-                                <input type="text" id="emailId" name="email" required lay-verify="required"
-                                    autocomplete="off" class="layui-input">
-                            </div>
-                        </div>
+							<label for="phoneId" class="layui-form-label">
+								<span class="x-red">*</span>Phone
+							</label>
+							<div class="layui-input-block">
+								<input type="text" id="phoneId" name="phone" required lay-verify="required"
+								autocomplete="off" class="layui-input">
+							</div>
+						</div>
+						
+						<div class="layui-form-item pr-20">
+							<label for="positionId" class="layui-form-label"><span class="x-red">*</span>Title</label>
+							<div id="positionId" class="layui-input-block">
+								<select name="position" lay-verify="required" lay-filter="aihao">
+								    <option value="0"></option>
+									<option value="Prof.">Prof.</option>
+								    <option value="Dr.">Dr.</option>
+								    <option value="Mr.">Mr.</option>
+								    <option value="Mrs.">Mrs.</option>
+									<option value="Miss">Miss</option>
+								</select>
+							</div>
+						</div>
+						
+						<div class="layui-form-item pr-20">
+							<label for="qqId" class="layui-form-label">
+								Mobile
+							</label>
+							<div class="layui-input-block">
+								<input type="text" id="qqId" name="qq"
+								utocomplete="off" class="layui-input">
+							</div>
+						</div>
+						
+						<div class="layui-form-item pr-20">
+							<label for="emailId" class="layui-form-label">
+								<span class="x-red">*</span>Email
+							</label>
+							<div class="layui-input-block">
+								<input type="text" id="emailId" name="email" required lay-verify="required"
+								autocomplete="off" class="layui-input">
+							</div>
+						</div>
 						
 						<div class="layui-form-item pr-20">
 						    <label for="secondemailId" class="layui-form-label">
 						        <span class="x-red">*</span>Alternative Email
 						    </label>
-						    <div class="layui-input-inline">
+						    <div class="layui-input-block">
 						        <input type="text" id="secondemailId" name="secondemail" required lay-verify="required"
 						            autocomplete="off" class="layui-input">
 						    </div>
 						</div>
 						
-                        <div class="layui-form-item pr-20">
-                            <label for="researchFieldId" class="layui-form-label">
-                                <span class="x-red">*</span>Research Interests
-                            </label>
-                            <div class="layui-input-block">
-                                <input type="text" id="researchFieldId" name="researchField" required lay-verify="required"
-                                       autocomplete="off" class="layui-input">
-                            </div>
-                        </div>
+						<div class="layui-form-item pr-20">
+							<label for="countryId" class="layui-form-label">
+								<span class="x-red">*</span>Country
+							</label>
+							<div class="layui-input-block">
+								<input type="text" id="countryId" name="country" required lay-verify="required"
+								autocomplete="off" class="layui-input">
+							</div>
+						</div>
+						
+						<div class="layui-form-item pr-20">
+							<label for="hindexId" class="layui-form-label">
+								H-index
+							</label>
+							<div class="layui-input-block">
+								<input type="text" id="hindexId" name="hindex"
+								autocomplete="off" class="layui-input">
+							</div>
+						</div>
+						
+						<div class="layui-form-item pr-20">
+							<label for="researchFieldId" class="layui-form-label">
+								<span class="x-red">*</span>Research Interests
+							</label>
+							<div class="layui-input-block">
+								<input type="text" id="researchFieldId" name="researchField" required lay-verify="required"
+								autocomplete="off" class="layui-input">
+							</div>
+						</div>
 
                         <div class="layui-form-item pr-20">
                             <label for="affiliationId" class="layui-form-label">
@@ -177,29 +200,63 @@
                                        autocomplete="off" class="layui-input">
                             </div>
                         </div>
+						
+						<div class="layui-form-item pr-20">
+							<label for="dietaryId" class="layui-form-label">Dietary</label>
+							<div id="dietaryId" class="layui-input-block">
+								<select name="dietary" lay-filter="aihao">
+								    <option value="0"></option>
+									<option value="No preference">No preference</option>
+								    <option value="Halal food">Halal food</option>
+								    <option value="Vegetarian">Vegetarian</option>
+								</select>
+							</div>
+						</div>
+
                         <div class="layui-form-item three-level-title">
                             <strong>II, Invitation Letter Information（*required）</strong>
                         </div>
-                        <div class="layui-form-item">
-                            <div class="layui-inline">
-                                <label for="passportId" class="layui-form-label">
-                                    Passport No.
-                                </label>
-                                <div class="layui-input-inline">
-                                    <input type="text" id="passportId" name="passport"
-                                        autocomplete="off" class="layui-input">
-                                </div>
-                            </div>
-                            <div class="layui-inline fr">
+						
+                        <div class="layui-form-item pr-20">
+							<label for="passportId" class="layui-form-label">
+								Passport No.
+							</label>
+							<div class="layui-input-block">
+								<input type="text" id="passportId" name="passport"
+								autocomplete="off" class="layui-input">
+							</div>
+						</div>
+							
+                            <div class="layui-form-item pr-20">
                                 <label for="birthdayId" class="layui-form-label">
                                     <span class="x-red">*</span>Date of Birth
                                 </label>
-                                <div class="layui-input-inline">
+                                <div class="layui-input-block">
                                     <input type="text" id="birthdayId" name="birthday" required lay-verify="required"
                                         autocomplete="off" class="layui-input">
                                 </div>
                             </div>
-                        </div>
+                        
+						<div class="layui-form-item pr-20">
+							<label for="arrivalId" class="layui-form-label">
+								Arrival Date
+							</label>
+							<div class="layui-input-block">
+								<input type="text" id="arrivalId" name="arrival"
+								autocomplete="off" class="layui-input">
+							</div>
+						</div>
+						
+						<div class="layui-form-item pr-20">
+							<label for="departureId" class="layui-form-label">
+								Departure Date
+							</label>
+							<div class="layui-input-block">
+								<input type="text" id="departureId" name="departure"
+								autocomplete="off" class="layui-input">
+							</div>
+						</div>
+						
                         <div class="layui-form-item three-level-title">
                             <strong>III, Registration Details（*required）</strong>
                         </div>
@@ -217,7 +274,7 @@
                         </div>
 
                         <div class="layui-form-item pr-20">
-                            <label for="registerTypeId"  class="layui-form-label"><span class="x-red">*</span>Reg. Type</label>
+                            <label for="registerTypeId"  class="layui-form-label"><span class="x-red">*</span>Registration Type</label>
                             <div id="registerTypeId" class="layui-input-block">
                                 <select name="registerType" lay-verify="required" lay-filter="aihao">
 									<option value="0"></option>
@@ -311,18 +368,10 @@
                         </div>
 
                     </div>
-                    <div class="layui-card">
-
 
                     </div>
                 </form>
-
-
-                </table>&nbsp;<br/>&nbsp;
-            </div>
 			</div>
-
-        </div>
 
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
@@ -334,22 +383,22 @@
 			    <div class="clear"></div>
 			  </ul>
 			</div>
-        <div class="f-20 text-center pt-20 pb-20 color-03 f-b">Important Dates</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Important Dates</div>
 				<div class="pb-10">
         <ul>
             <p>Abstract Deadline: Oct. 20, 2019</p>
 						<p>Reg. Deadline: Oct. 31, 2019</p>
-						<p>Acceptance Notification: 10 working days</p>
+						<p>Acceptance: 7-10 working days</p>
 						<p>Conf. Date: Dec. 26-28, 2019</p>
         </ul>
 				</div>
       <div style="border-top: 2px dashed; border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
-        <div class="f-20 text-center pt-20 pb-20 color-03 f-b">Organizers</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Organizers</div>
         <ul>
             <p>Asia-Pacific Association of Natural Science and Engineering</p>
         </ul>
       </div>
-        <div class="f-20 text-center pt-20 pb-20 color-03 f-b">Contact</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
         <ul>
             <p>Secretary：Jason Sun, Alex Liu</p>
 						<p>Email：icabst@apanse.com</p>
@@ -358,11 +407,10 @@
             <p>Wechat：APANSE</p>
         </ul>
     </div>
-                
-        <div class="clear"></div>
+    
+    <div class="clear"></div>
+  </div>
 
-
-    </div>
 
 </div>
 
