--- a/src/main/resources/templates/page/en/venue.html
+++ b/src/main/resources/templates/page/en/venue.html
@@ -34,10 +34,10 @@
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
           </div>
           <div style="width:75%;height:200px; float:left;display:inline-block;">
-            <p class="banner_p" style="padding:50px 0;font-family:'Times New Roman';font-weight:bold" align="right">
+            <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
               International Conference On Advances in Biological<br/>
 							Science and Technology<br/>
-							December 26-28, 2019
+							<i>Bangkok, Thailand -- December 26-28, 2019</i>
             </p>
           </div>
           <div class="clear"></div>
@@ -47,27 +47,27 @@
   </div>
 
 
-    <div class="navs">
-      <ul class="menus mg-ctr">
-        <li><a title="ICABST2019" href="/">Home</a></li>
-        <li><a title="About" href="/about">About</a></li>
-        <li><a title="Organization" href="/organization">Organizer</a></li>
-        <li><a title="Speaker" href="/speakers">Speaker</a></li>
-        <li><a title="Program" href="/program">Program</a></li>
-        <li><a title="Submission" href="/submission">Submission</a></li>
-        <li><a title="Registration" href="/registration">Registration</a></li>
-        <li><a title="Venue" href="/venue">Venue</a></li>
-    		<li><a title="Chinese" href="/cn">CHINESE</a></li>
-      </ul>
-    </div>
+   <div class="navs">
+    <ul class="menus mg-ctr">
+      <li><a title="ICABST2019" href="/">Home</a></li>
+      <li><a title="About" href="/about">About</a></li>
+      <li><a title="Organization" href="/organization">Organizer</a></li>
+      <li><a title="Speaker" href="/speakers">Speaker</a></li>
+      <li style="width: 140px"><a title="Submission" href="/submission">Submission</a></li>
+			<li><a title="Program" href="/program">Program</a></li>
+      <li style="width: 140px"><a title="Registration" href="/registration">Registration</a></li>
+      <li><a title="Venue" href="/venue">Venue</a></li>
+    	<li><a title="Chinese" href="/cn">CHINESE</a></li>
+    </ul>
+  </div>
   
 </div>
 <!--header end-->
 
 <div class="w-1200 bg_white pt-30">
-	<div class="page; lh-40" style="border: 2px dashed; border-color: #c3bfbf; padding: 10px;">
+	<div class="page; lh-40" style="border: 2px dashed; border-color: #c3bfbf; padding: 10px; text-align: justify; font-family:'Times New Roman'; font-size: 20px">
     <div class="page_left col-6-6" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
-      <div class="background3" style="padding-left:55px; line-height: 60px; padding-bottom: 8px;">&nbsp;&nbsp;会议地点</div>
+      <div class="background3" style="padding-left:80px; line-height: 60px; padding-bottom: 8px;">&nbsp;&nbsp;Venue</div>
       <div class="public_p pb-20 pl-30">
 				<p class="f-b">Hotel Name：The Tawana Bangkok, <a class="pointer" href=" http://www.tawanabangkok.com/" style="color: #102cf7" target="_blank"><u>http://www.tawanabangkok.com/ </u></a><br/>
 				Address：80 Surawongse Road, Bangrak, Bankok 10500 Thailand<br/>
@@ -86,7 +86,7 @@
 				</div>
       </div>
     <div style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px">
-			<div class="background3" style="padding-left:55px; line-height: 60px; padding-bottom: 8px;">Path</div>
+			<div class="background3" style="padding-left:80px; line-height: 60px; padding-bottom: 8px;">Path</div>
         <div class="public_p pl-30">
 				<p>
 					<strong>1. From Suvarnabhumi Airport：</strong><br/>
@@ -110,7 +110,7 @@
 				</ul>
 		</div>
 		</div>
-			<div class="background3" style="padding-left:55px; line-height: 60px; padding-bottom: 8px;">Visa Information</div>
+			<div class="background3" style="padding-left:80px; line-height: 60px; padding-bottom: 8px;">Visa Information</div>
 			<div class="public_p pl-30">
 					<p>1. Generally, a foreign citizen who wishes to enter the Kingdom of Thailand is required to obtain a visa from a Royal Thai Embassy or a Royal Thai Consulate-General.  However, nationals of certain countries do not require a visa if they meet visa exemption requirements as follows:</p>
 					<p>1.1) They are nationals of countries which are exempted from visa requirements when entering Thailand for tourism purposes.  Such nationals will be permitted to stay in the Kingdom for a period of not exceeding 30 days. For more information, please see Summary of Countries and Territories entitled for Visa Exemption and Visa on Arrival to Thailand. </p>
