--- a/src/main/resources/templates/page/en/speakers.html
+++ b/src/main/resources/templates/page/en/speakers.html
@@ -34,10 +34,10 @@
             <img style="width: 200px;height: 200px;" src="../img/ICABST_LOGO2.png">
           </div>
           <div style="width:75%;height:200px; float:left;display:inline-block;">
-            <p class="banner_p" style="padding:50px 0;font-family:'Times New Roman';font-weight:bold" align="right">
+            <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
               International Conference On Advances in Biological<br/>
 							Science and Technology<br/>
-							December 26-28, 2019
+							<i>Bangkok, Thailand -- December 26-28, 2019</i>
             </p>
           </div>
           <div class="clear"></div>
@@ -47,26 +47,26 @@
   </div>
 
 
-    <div class="navs">
-      <ul class="menus mg-ctr">
-        <li><a title="ICABST2019" href="/">Home</a></li>
-        <li><a title="About" href="/about">About</a></li>
-        <li><a title="Organization" href="/organization">Organizer</a></li>
-        <li><a title="Speaker" href="/speakers">Speaker</a></li>
-        <li><a title="Program" href="/program">Program</a></li>
-        <li><a title="Submission" href="/submission">Submission</a></li>
-        <li><a title="Registration" href="/registration">Registration</a></li>
-        <li><a title="Venue" href="/venue">Venue</a></li>
-    		<li><a title="Chinese" href="/cn">CHINESE</a></li>
-      </ul>
-    </div>
+   <div class="navs">
+    <ul class="menus mg-ctr">
+      <li><a title="ICABST2019" href="/">Home</a></li>
+      <li><a title="About" href="/about">About</a></li>
+      <li><a title="Organization" href="/organization">Organizer</a></li>
+      <li><a title="Speaker" href="/speakers">Speaker</a></li>
+      <li style="width: 140px"><a title="Submission" href="/submission">Submission</a></li>
+			<li><a title="Program" href="/program">Program</a></li>
+      <li style="width: 140px"><a title="Registration" href="/registration">Registration</a></li>
+      <li><a title="Venue" href="/venue">Venue</a></li>
+    	<li><a title="Chinese" href="/cn">CHINESE</a></li>
+    </ul>
+  </div>
     
 </div>
 <!--header end-->
 
 <div class="w-1200 bg_white pt-30">
 
-  <div class="page; lh-40">
+  <div class="page; lh-40" style="text-align: justify; font-family:'Times New Roman'; font-size: 20px">
     <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
       <div class="background4" style="padding-left:55px; padding-bottom: 10px;">Speakers List</div>
       <!--dl>
@@ -182,22 +182,22 @@
 			    <div class="clear"></div>
 			  </ul>
 			</div>
-        <div class="f-20 text-center pt-20 pb-20 color-03 f-b">Important Dates</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Important Dates</div>
 				<div class="pb-10">
         <ul>
             <p>Abstract Deadline: Oct. 20, 2019</p>
 						<p>Reg. Deadline: Oct. 31, 2019</p>
-						<p>Acceptance Notification: 10 working days</p>
+						<p>Acceptance: 7-10 working days</p>
 						<p>Conf. Date: Dec. 26-28, 2019</p>
         </ul>
 				</div>
       <div style="border-top: 2px dashed; border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
-        <div class="f-20 text-center pt-20 pb-20 color-03 f-b">Organizers</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Organizers</div>
         <ul>
             <p>Asia-Pacific Association of Natural Science and Engineering</p>
         </ul>
       </div>
-        <div class="f-20 text-center pt-20 pb-20 color-03 f-b">Contact</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
         <ul>
             <p>Secretary：Jason Sun, Alex Liu</p>
 						<p>Email：icabst@apanse.com</p>
