--- a/src/main/resources/templates/page/cn/registration.html
+++ b/src/main/resources/templates/page/cn/registration.html
@@ -77,21 +77,22 @@
           <strong>注册步骤：</strong>
         </p>
         <p>
-
-
           1. <a class="pointer" href="/cn/submit" target="_blank" style="color: #102cf7"><u><strong>通过在线报名页面提交参会信息(初始文档需小于10MB)</strong></u></a>，并选择参会类型
         </p>
+				<p>
+					2. 如在线提交失败，可下载并填写<a class="pointer" href="/" target="_blank" style="color: #102cf7"><u>参会说明表</u></a>，完成后同会议摘要（听众无需摘要）一并发至会务邮箱icabst@apanse.com
+				</p>
         <p>
-          2. 我方会在一周内与您核对相关信息并提供相关材料（如会议通知、录用函等）
+          3. 我方会在一周内与您核对相关信息并提供相关材料（如会议通知、录用函等）
         </p>
         <p>
-          3. 根据相关材料进行缴费注册
+          4. 根据相关材料进行缴费注册
         </p>
         <p>
-          4. 完成注册后，将由会议主办方及泰国合作方提供正式邀请函
+          5. 完成注册后，将由会议主办方及泰国合作方提供正式邀请函
         </p>
         <p>
-          5. 参会者收到正式邀请函后办理签证、审批等程序。
+          6. 参会者收到正式邀请函后办理签证、审批等程序。
         </p>
         <p>
           注：1. 本届会议将于12月底召开，鉴于出境参加学术会议需要所在单位提前审批，因此希望您提前安排参会及申请事宜，以便我方将提供需要的文档材料。
@@ -214,7 +215,7 @@
 <!--footer-->
 <footer class="main-footer">
   <div class="text-center lh-36 footer w-1200">
-    <p style="font-family:'Times New Roman';font-weight:bold">2019 Int’l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
+    <p style="font-family:'Times New Roman';font-weight:bold">2019 Int'l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
 		Conference Secretary: Jason Sun; Assistant: Alex Liu<br/>
 		Email: icabst@apanse.com; contact@apanse.com;    Tel.: +86-0371-63226982; Cellphone: +86-18137471420<br/>Copyright © APANSE All rights reserved.
 		</p>
