--- a/src/main/resources/templates/page/cn/article.html
+++ b/src/main/resources/templates/page/cn/article.html
@@ -72,7 +72,7 @@
             <div class="public_p pb-20 pl-30">
                 <p>1. 所有学者提交的论文都将做保密处理</p>
                 <p>2. 通过如下表格在线提交投稿信息以完成预注册</p>
-                <p>3. 如论文提交失败，可将相关信息填写后复制到word文档中并和论文全文一起发送至投稿邮箱editor@apanse.com</p>
+                <p>3. 如论文提交失败，可直接将论文发送至投稿邮箱editor@apanse.com，并告知您的联系方式及发表要求</p>
                 <p>4. 在提交成功后，编辑部将在1-2个工作日内为您反馈相关信息</p>
 				<p>5. 编辑部唯一联系邮箱为editor@apanse.com（如方便，请将该邮箱加入到您的通讯白名单中）</p>
 				<p>6. 请准确填写投稿人信息及联系方式，编辑部将以投稿人作为第一联系人进行沟通</p>
@@ -390,7 +390,7 @@
 <!--footer-->
 <footer class="main-footer">
     <div class="text-center lh-36 footer w-1200">
-        <p style="font-family:'Times New Roman';font-weight:bold">2019 Int’l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
+        <p style="font-family:'Times New Roman';font-weight:bold">2019 Int'l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
             Conference Secretary: Jason Sun; Assistant: Alex Liu<br/>
             Email: icabst@apanse.com; contact@apanse.com;    Tel.: +86-0371-63226982; Cellphone: +86-18137471420<br/>Copyright © APANSE All rights reserved.
         </p>
