--- a/src/main/resources/templates/page/cn/index.html
+++ b/src/main/resources/templates/page/cn/index.html
@@ -95,7 +95,8 @@
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术国际会议（ICABST2019）将于2019年12月26日-28日在泰国曼谷召开。会议由亚太自然科学与工程协会主办。<br/>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议报告分为特邀报告、主题报告、口头报告和张贴海报四类形式。各类报告及听众参会，均会颁发交流证书。大会鼓励各界学者、科研人员踊跃参会，共同为从事相关领域的同僚提供最新研究成果、探讨最新技术、了解国际研究前沿和热点的机会和平台。<br/>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;大会旨在促进生物科学技术的发展，并为分子生物学、生物医学与制药、生物力学与工程、生物及分子材料、生物化学、农业食品科学、及动植物学等相关学科领域的专家和学者搭建国际性学术交流平台，展示前沿研究成果，交流探讨最新工程技术，提出学科面临的考验，探索相关解决方法，推动生物科学与技术行业的发展。<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议被Nature Events（www.nature.com）、科学网、CNKI中国知网、丁香园等平台收录和发布，同时被多个国内外出版机构列为合作会议； 且在会议筹备期间，多个出版方提供版面支持，经由我方审核通过的论文，均可安排至相应期刊发表，并送交至相关数据库如SCI、EI及ISTP（CPCI-S）进行收录检索。
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议被Nature Events（www.nature.com）、科学网、CNKI中国知网、丁香园等平台收录和发布，同时被多个国内外出版机构列为合作会议； 且在会议筹备期间，多个出版方提供版面支持，经由我方审核通过的论文，均可安排至相应期刊发表，并送交至相关数据库如SCI、EI及ISTP（CPCI-S）进行收录检索。<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议力争成为推动理论应用发展的专业、前沿国际会议之一，欢迎广大学者、师生参会交流。同时希望相关高校和科研单位帮助转发会议信息<a class="pointer" href="/cn" target="_blank" style="color: #102cf7"><u>（下载会议宣传册）</u></a>。
         </p>
       </div>
 			</div>
@@ -118,10 +119,10 @@
         <div class="background5" style="padding-left:55px;">相关链接</div>
         <div class="url pd-5">
           <ul>
-            <li ><a class="time pl-30 " href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&nbsp;&nbsp; 倒计时:&nbsp;<span id="content"></span>&nbsp;&nbsp;&nbsp;天</a></li>
-            <li ><a class="announcement" href="/cn/about" target="_blank">&emsp;&emsp;&emsp;会议通知</a></li>
-            <li ><a class="invitation" href="/cn/cfp" target="_blank">&emsp;&emsp;&emsp;会议邀请函</a></li>
-						<li ><a class="article" href="/cn/cfp" target="_blank">&emsp;&emsp;&emsp;征文通知</a></li>
+            <li ><a class="time pl-30 " href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&nbsp;&nbsp; <strong>倒计时:&nbsp;<span id="content"></span>&nbsp;&nbsp;&nbsp;天</strong></a></li>
+            <li ><a class="announcement" href="/cn" target="_blank">&emsp;&emsp;&emsp;<strong>会议宣传册</strong></a></li>
+            <li ><a class="invitation" href="/cn" target="_blank">&emsp;&emsp;&emsp;<strong>会议注册表</strong></a></li>
+						<li ><a class="article" href="/cn" target="_blank">&emsp;&emsp;&emsp;<strong>摘要模板</strong></a></li>
           </ul>
           <div class="clear"></div>
         </div>
@@ -180,6 +181,8 @@
       <li><img src="../img/4--sciencemeeting-logo.jpg"/></li>
       <li><img src="../img/5--bwp-logo.png"/></li>
       <li><img src="../img/6--LOGO_EBW.jpg"/></li>
+			<li><img src="../img/7--IOP.png"/></li>
+			<li><img src="../img/8--AIP.png"/></li>
       <div class="clear"></div>
     </ul>
   </div>
@@ -188,7 +191,7 @@
 
 <footer class="main-footer">
   <div class="text-center lh-36 footer w-1200">
-    <p style="font-family:'Times New Roman';font-weight:bold">2019 Int’l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
+    <p style="font-family:'Times New Roman';font-weight:bold">2019 Int'l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
 		Conference Secretary: Jason Sun; Assistant: Alex Liu<br/>
 		Email: icabst@apanse.com; contact@apanse.com;    Tel.: +86-0371-63226982; Cellphone: +86-18137471420<br/>Copyright © APANSE All rights reserved.
 		</p>
