--- a/src/main/resources/templates/page/cn/speakers.html
+++ b/src/main/resources/templates/page/cn/speakers.html
@@ -217,7 +217,7 @@
 <!--footer-->
 <footer class="main-footer">
   <div class="text-center lh-36 footer w-1200">
-    <p style="font-family:'Times New Roman';font-weight:bold">2019 Int’l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
+    <p style="font-family:'Times New Roman';font-weight:bold">2019 Int'l Conf. On Advances in Biological Science and Technology (ICABST2019)<br/>
 		Conference Secretary: Jason Sun; Assistant: Alex Liu<br/>
 		Email: icabst@apanse.com; contact@apanse.com;    Tel.: +86-0371-63226982; Cellphone: +86-18137471420<br/>Copyright © APANSE All rights reserved.
 		</p>
